@@ -111,8 +111,8 @@ G_BEGIN_DECLS
 #define NWAMUI_CAPPLET_OPT_NET_PREF_DIALOG_STR      "-p"
 #define NWAMUI_CAPPLET_OPT_NET_PREF_CONFIG          'n'
 #define NWAMUI_CAPPLET_OPT_NET_PREF_CONFIG_STR      "-n"
-#define NWAMUI_CAPPLET_OPT_VPN_PREF_DIALOG          'v'
-#define NWAMUI_CAPPLET_OPT_VPN_PREF_DIALOG_STR      "-v"
+#define NWAMUI_CAPPLET_OPT_VPN_PREF_DIALOG          'm'
+#define NWAMUI_CAPPLET_OPT_VPN_PREF_DIALOG_STR      "-m"
 #define NWAMUI_CAPPLET_OPT_WIFI_CHOOSER_DIALOG      'c'
 #define NWAMUI_CAPPLET_OPT_WIFI_CHOOSER_DIALOG_STR  "-c"
 #define NWAMUI_CAPPLET_OPT_LOCATION_DIALOG          'l'
